deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xjicloud
  labels:
    app.kubernetes.io/part-of: xjicloud
